fix scrollbar in popup

--- a/src/PopupAddTask/Popup.scss
+++ b/src/PopupAddTask/Popup.scss
@@ -11,7 +11,7 @@
     width: 50%;
     height: 50%;
     display: flex;
-    
+
     flex-direction: column;
     border-radius: 20px;
     padding: 10px;
@@ -43,9 +43,22 @@
     background-color: var(#{--card-background-default});
     color: var(#{--text-color-default});
     padding: 1rem;
-    resize:none;
-    height:100%;
-    
+    resize: none;
+    height: 100%;
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: var(#{--component-background-default});
+        border-radius: 12px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 12px;
+        background-color: var(#{--body-background-default});
+    }
+}
+.text-field__input__list{
+    background-color: var(#{--card-background-default});
 }
 
 .popup__title {
